fix: edit trivial gap between elements

--- a/hanwooplz_project/hanwooplz_app/static/css/posts_list.css
+++ b/hanwooplz_project/hanwooplz_app/static/css/posts_list.css
@@ -70,6 +70,7 @@ h2 {
 table.board-table {
     width: 100%;
     border-spacing: 0;
+    padding-top: 5px;
 }
 
 .posts-list {
